--- a/Prueba.ipynb
+++ b/Prueba.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Untitled4.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOXG+ZP9z6hmgelBUpbzk4X",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMQHggvf8SUATqotLGluqu/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,10 +31,176 @@
         "id": "8xeuJDvDi05Y"
       },
       "source": [
-        "1+1"
+        "import pandas as pd\n",
+        "import os"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "id": "iDd8rOCrj-aa",
+        "outputId": "bef54aec-e7ce-468b-80cb-7b079163ebd5"
+      },
+      "source": [
+        "urlpath = \"https://raw.githubusercontent.com/guelpman/Priorizacion_Descuentos_Peru/main/\"\n",
+        "filename = \"AIF-20_bike-no.csv\"\n",
+        "fullpath = os.path.join(urlpath, filename)\n",
+        "data= pd.read_csv(fullpath, error_bad_lines=False)\n",
+        "data.head()"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>instant</th>\n",
+              "      <th>date</th>\n",
+              "      <th>season</th>\n",
+              "      <th>yr</th>\n",
+              "      <th>mnth</th>\n",
+              "      <th>weekday</th>\n",
+              "      <th>weathersit</th>\n",
+              "      <th>temp</th>\n",
+              "      <th>atemp</th>\n",
+              "      <th>hum</th>\n",
+              "      <th>windspeed</th>\n",
+              "      <th>casual</th>\n",
+              "      <th>registered</th>\n",
+              "      <th>cnt</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1/1/2011</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>6</td>\n",
+              "      <td>2</td>\n",
+              "      <td>0.344167</td>\n",
+              "      <td>0.363625</td>\n",
+              "      <td>0.805833</td>\n",
+              "      <td>0.160446</td>\n",
+              "      <td>331</td>\n",
+              "      <td>654</td>\n",
+              "      <td>985</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2</td>\n",
+              "      <td>1/2/2011</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>0.363478</td>\n",
+              "      <td>0.353739</td>\n",
+              "      <td>0.696087</td>\n",
+              "      <td>0.248539</td>\n",
+              "      <td>131</td>\n",
+              "      <td>670</td>\n",
+              "      <td>801</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>3</td>\n",
+              "      <td>1/3/2011</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.196364</td>\n",
+              "      <td>0.189405</td>\n",
+              "      <td>0.437273</td>\n",
+              "      <td>0.248309</td>\n",
+              "      <td>120</td>\n",
+              "      <td>1229</td>\n",
+              "      <td>1349</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>4</td>\n",
+              "      <td>1/4/2011</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.200000</td>\n",
+              "      <td>0.212122</td>\n",
+              "      <td>0.590435</td>\n",
+              "      <td>0.160296</td>\n",
+              "      <td>108</td>\n",
+              "      <td>1454</td>\n",
+              "      <td>1562</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>5</td>\n",
+              "      <td>1/5/2011</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.226957</td>\n",
+              "      <td>0.229270</td>\n",
+              "      <td>0.436957</td>\n",
+              "      <td>0.186900</td>\n",
+              "      <td>82</td>\n",
+              "      <td>1518</td>\n",
+              "      <td>1600</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   instant      date  season  yr  ...  windspeed  casual  registered   cnt\n",
+              "0        1  1/1/2011       1   0  ...   0.160446     331         654   985\n",
+              "1        2  1/2/2011       1   0  ...   0.248539     131         670   801\n",
+              "2        3  1/3/2011       1   0  ...   0.248309     120        1229  1349\n",
+              "3        4  1/4/2011       1   0  ...   0.160296     108        1454  1562\n",
+              "4        5  1/5/2011       1   0  ...   0.186900      82        1518  1600\n",
+              "\n",
+              "[5 rows x 14 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
+      ]
     }
   ]
 }
