Creado mediante Colaboratory

--- a/Prueba.ipynb
+++ b/Prueba.ipynb
@@ -6,7 +6,6 @@
       "name": "Untitled4.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMQHggvf8SUATqotLGluqu/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +33,7 @@
         "import pandas as pd\n",
         "import os"
       ],
-      "execution_count": 1,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -45,7 +44,7 @@
           "height": 204
         },
         "id": "iDd8rOCrj-aa",
-        "outputId": "bef54aec-e7ce-468b-80cb-7b079163ebd5"
+        "outputId": "65852289-ea2b-421b-a833-75ac3a637968"
       },
       "source": [
         "urlpath = \"https://raw.githubusercontent.com/guelpman/Priorizacion_Descuentos_Peru/main/\"\n",
@@ -54,7 +53,7 @@
         "data= pd.read_csv(fullpath, error_bad_lines=False)\n",
         "data.head()"
       ],
-      "execution_count": 2,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -198,7 +197,213 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OOGkmg94mtkR",
+        "outputId": "aac5916c-5a89-4f49-a6f7-924e53ddd465",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 297
+        }
+      },
+      "source": [
+        "data.describe()"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>instant</th>\n",
+              "      <th>season</th>\n",
+              "      <th>yr</th>\n",
+              "      <th>mnth</th>\n",
+              "      <th>weekday</th>\n",
+              "      <th>weathersit</th>\n",
+              "      <th>temp</th>\n",
+              "      <th>atemp</th>\n",
+              "      <th>hum</th>\n",
+              "      <th>windspeed</th>\n",
+              "      <th>casual</th>\n",
+              "      <th>registered</th>\n",
+              "      <th>cnt</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>count</th>\n",
+              "      <td>731.000000</td>\n",
+              "      <td>731.000000</td>\n",
+              "      <td>731.000000</td>\n",
+              "      <td>731.000000</td>\n",
+              "      <td>731.000000</td>\n",
+              "      <td>731.000000</td>\n",
+              "      <td>731.000000</td>\n",
+              "      <td>731.000000</td>\n",
+              "      <td>731.000000</td>\n",
+              "      <td>731.000000</td>\n",
+              "      <td>731.000000</td>\n",
+              "      <td>731.000000</td>\n",
+              "      <td>731.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>mean</th>\n",
+              "      <td>366.000000</td>\n",
+              "      <td>2.496580</td>\n",
+              "      <td>0.500684</td>\n",
+              "      <td>6.519836</td>\n",
+              "      <td>2.997264</td>\n",
+              "      <td>1.395349</td>\n",
+              "      <td>0.495385</td>\n",
+              "      <td>0.474354</td>\n",
+              "      <td>0.627894</td>\n",
+              "      <td>0.190486</td>\n",
+              "      <td>848.176471</td>\n",
+              "      <td>3656.172367</td>\n",
+              "      <td>4504.348837</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>std</th>\n",
+              "      <td>211.165812</td>\n",
+              "      <td>1.110807</td>\n",
+              "      <td>0.500342</td>\n",
+              "      <td>3.451913</td>\n",
+              "      <td>2.004787</td>\n",
+              "      <td>0.544894</td>\n",
+              "      <td>0.183051</td>\n",
+              "      <td>0.162961</td>\n",
+              "      <td>0.142429</td>\n",
+              "      <td>0.077498</td>\n",
+              "      <td>686.622488</td>\n",
+              "      <td>1560.256377</td>\n",
+              "      <td>1937.211452</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>min</th>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.059130</td>\n",
+              "      <td>0.079070</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.022392</td>\n",
+              "      <td>2.000000</td>\n",
+              "      <td>20.000000</td>\n",
+              "      <td>22.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25%</th>\n",
+              "      <td>183.500000</td>\n",
+              "      <td>2.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>4.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.337083</td>\n",
+              "      <td>0.337842</td>\n",
+              "      <td>0.520000</td>\n",
+              "      <td>0.134950</td>\n",
+              "      <td>315.500000</td>\n",
+              "      <td>2497.000000</td>\n",
+              "      <td>3152.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>50%</th>\n",
+              "      <td>366.000000</td>\n",
+              "      <td>3.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>7.000000</td>\n",
+              "      <td>3.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>0.498333</td>\n",
+              "      <td>0.486733</td>\n",
+              "      <td>0.626667</td>\n",
+              "      <td>0.180975</td>\n",
+              "      <td>713.000000</td>\n",
+              "      <td>3662.000000</td>\n",
+              "      <td>4548.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>75%</th>\n",
+              "      <td>548.500000</td>\n",
+              "      <td>3.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>10.000000</td>\n",
+              "      <td>5.000000</td>\n",
+              "      <td>2.000000</td>\n",
+              "      <td>0.655417</td>\n",
+              "      <td>0.608602</td>\n",
+              "      <td>0.730209</td>\n",
+              "      <td>0.233214</td>\n",
+              "      <td>1096.000000</td>\n",
+              "      <td>4776.500000</td>\n",
+              "      <td>5956.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>max</th>\n",
+              "      <td>731.000000</td>\n",
+              "      <td>4.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>12.000000</td>\n",
+              "      <td>6.000000</td>\n",
+              "      <td>3.000000</td>\n",
+              "      <td>0.861667</td>\n",
+              "      <td>0.840896</td>\n",
+              "      <td>0.972500</td>\n",
+              "      <td>0.507463</td>\n",
+              "      <td>3410.000000</td>\n",
+              "      <td>6946.000000</td>\n",
+              "      <td>8714.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "          instant      season  ...   registered          cnt\n",
+              "count  731.000000  731.000000  ...   731.000000   731.000000\n",
+              "mean   366.000000    2.496580  ...  3656.172367  4504.348837\n",
+              "std    211.165812    1.110807  ...  1560.256377  1937.211452\n",
+              "min      1.000000    1.000000  ...    20.000000    22.000000\n",
+              "25%    183.500000    2.000000  ...  2497.000000  3152.000000\n",
+              "50%    366.000000    3.000000  ...  3662.000000  4548.000000\n",
+              "75%    548.500000    3.000000  ...  4776.500000  5956.000000\n",
+              "max    731.000000    4.000000  ...  6946.000000  8714.000000\n",
+              "\n",
+              "[8 rows x 13 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
         }
       ]
     }
