--- a/Prueba.ipynb
+++ b/Prueba.ipynb
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/guelpman/Priorizacion_Descuentos_Peru/blob/main/Prueba.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/guelpman/Priorizacion_Descuentos_Peru/blob/Prueba1/Prueba.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -33,7 +33,7 @@
         "import pandas as pd\n",
         "import os"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -53,7 +53,7 @@
         "data= pd.read_csv(fullpath, error_bad_lines=False)\n",
         "data.head()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -205,16 +205,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "OOGkmg94mtkR",
-        "outputId": "aac5916c-5a89-4f49-a6f7-924e53ddd465",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 297
-        }
+        },
+        "outputId": "aac5916c-5a89-4f49-a6f7-924e53ddd465"
       },
       "source": [
         "data.describe()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -404,6 +404,34 @@
             "tags": []
           },
           "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SoVZnOHn_qXG",
+        "outputId": "f6521ba8-1104-4719-a40b-5b6e15e1e70c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "100+100"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "200"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
         }
       ]
     }
