--- a/Prueba.ipynb
+++ b/Prueba.ipynb
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/guelpman/Priorizacion_Descuentos_Peru/blob/Prueba1/Prueba.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/guelpman/Priorizacion_Descuentos_Peru/blob/Shaun/Prueba.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -411,15 +411,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "SoVZnOHn_qXG",
-        "outputId": "f6521ba8-1104-4719-a40b-5b6e15e1e70c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f6521ba8-1104-4719-a40b-5b6e15e1e70c"
       },
       "source": [
         "100+100"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -432,6 +432,34 @@
             "tags": []
           },
           "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PDedlpb_EPxt",
+        "outputId": "0251385b-9362-4fdd-f99a-ada54ccf3222",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "50+40"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "90"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 1
         }
       ]
     }
