--- a/Prueba.ipynb
+++ b/Prueba.ipynb
@@ -439,13 +439,41 @@
       "cell_type": "code",
       "metadata": {
         "id": "PDedlpb_EPxt",
-        "outputId": "0251385b-9362-4fdd-f99a-ada54ccf3222",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0251385b-9362-4fdd-f99a-ada54ccf3222"
+      },
+      "source": [
+        "50+40"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "90"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sNjRLVfsaj3z",
+        "outputId": "0ee33b5b-1ab5-4ec7-dc2c-315cc0ced951",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "50+40"
+        "12+15-40"
       ],
       "execution_count": 1,
       "outputs": [
@@ -453,7 +481,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "90"
+              "-13"
             ]
           },
           "metadata": {
