Creado mediante Colaboratory

--- a/Prueba.ipynb
+++ b/Prueba.ipynb
@@ -39,6 +39,17 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "n5VZ42hFbzHX"
+      },
+      "source": [
+        "import numpy as np"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -454,34 +465,6 @@
           "data": {
             "text/plain": [
               "90"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 1
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "sNjRLVfsaj3z",
-        "outputId": "0ee33b5b-1ab5-4ec7-dc2c-315cc0ced951",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "12+15-40"
-      ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "-13"
             ]
           },
           "metadata": {
