--- a/Prueba.ipynb
+++ b/Prueba.ipynb
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/guelpman/Priorizacion_Descuentos_Peru/blob/Shaun/Prueba.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/guelpman/Priorizacion_Descuentos_Peru/blob/bitzer/Prueba.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -449,6 +449,29 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "J5C6O9wvcwI9",
+        "outputId": "526e4708-4af9-4201-8943-0ddf2ef6cca3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print (\"shaun crazy\")"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "shaun crazy\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "PDedlpb_EPxt",
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -471,6 +494,29 @@
             "tags": []
           },
           "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Dyeqm5lIcno2",
+        "outputId": "7db20c88-f6e8-4ae3-b81f-d4502aa381c1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print (\"niña crazy\")"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "niña crazy\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
